[package]
name = "cryptography_toolkit"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
target-cpu = "native"

[dependencies]
rayon = "1.6"
bitvec = "1"
rand = "0.8.5"
num-bigint = {version = "0.4.6", features = ["rand"]}
num-traits = "0.2"
num-integer="0.1"
hex = "0.4.3"
